--- a/Resources/Prototypes/_White/Entities/Clothing/Head/hive_head.yml
+++ b/Resources/Prototypes/_White/Entities/Clothing/Head/hive_head.yml
@@ -21,6 +21,7 @@
   - type: FlashImmunity
   - type: EyeProtection
   - type: HiveHead
+    beesAmount: 6
 
 - type: entity
   id: ActionReleaseBees
