- fix: Faction cleanup.

--- a/Resources/Prototypes/ai_factions.yml
+++ b/Resources/Prototypes/ai_factions.yml
@@ -7,6 +7,8 @@
     - PetsNT
     - Zombie
     - Revolutionary
+    - Cultist
+    - Changeling
 
 - type: npcFaction
   id: NanoTrasen
@@ -16,7 +18,9 @@
   - Xeno
   - Zombie
   - Revolutionary
+  - Cultist
   - Wizard
+  - Changeling
 
 - type: npcFaction
   id: Mouse
@@ -43,6 +47,8 @@
   - PetsNT
   - Zombie
   - Revolutionary
+  - Cultist
+  - Changeling
 
 - type: npcFaction
   id: SimpleNeutral
@@ -55,7 +61,9 @@
   - Xeno
   - PetsNT
   - Zombie
+  - Cultist
   - Wizard
+  - Changeling
 
 - type: npcFaction
   id: Xeno
@@ -66,6 +74,8 @@
   - PetsNT
   - Zombie
   - Revolutionary
+  - Cultist
+  - Changeling
 
 - type: npcFaction
   id: Zombie
@@ -77,7 +87,9 @@
   - Passive
   - PetsNT
   - Revolutionary
+  - Cultist
   - Wizard
+  - Changeling
 
 - type: npcFaction
   id: Revolutionary
@@ -86,7 +98,9 @@
   - Zombie
   - SimpleHostile
   - Dragon
+  - Cultist
   - Wizard
+  - Changeling
 
 # WD EDIT STARt
 - type: npcFaction
@@ -95,9 +109,10 @@
     - NanoTrasen
     - SimpleHostile
     - Xeno
-    - PetsNT
+    - Dragon
     - Syndicate
     - Wizard
+    - Changeling
 
 - type: npcFaction
   id: Wizard
@@ -107,4 +122,18 @@
   - Cultist
   - Revolutionary
   - Zombie
+  - Changeling
+
+- type: npcFaction
+  id: Changeling
+  hostile:
+  - NanoTrasen
+  - SimpleHostile
+  - Xeno
+  - Dragon
+  - Syndicate
+  - Cultist
+  - Revolutionary
+  - Zombie
+  - Wizard
 # WD EDIT END
