- add: New wizard clothes & update wizard shuttle,

--- a/Resources/Prototypes/_White/Entities/Clothing/nigger.yml
+++ b/Resources/Prototypes/_White/Entities/Clothing/nigger.yml
@@ -33,3 +33,33 @@
   id: ClothingOuterRealWizardViolet
   components:
     - type: WizardClothes
+
+- type: entity
+  parent: ClothingHeadHatWizard
+  id: ClothingHeadHatRealWizardFancy
+  components:
+    - type: WizardClothes
+    - type: Sprite
+      sprite: White/Clothing/Head/wizhat.rsi
+    - type: Clothing
+      sprite: White/Clothing/Head/wizhat.rsi
+
+- type: entity
+  parent: ClothingHeadHatWizard
+  id: ClothingHeadHatRealWizardFancyAlt
+  components:
+    - type: WizardClothes
+    - type: Sprite
+      sprite: White/Clothing/Head/wizhat-alt.rsi
+    - type: Clothing
+      sprite: White/Clothing/Head/wizhat-alt.rsi
+
+- type: entity
+  parent: ClothingOuterWizard
+  id: ClothingOuterRealWizardFancy
+  components:
+    - type: WizardClothes
+    - type: Sprite
+      sprite: White/Clothing/OuterClothing/robe.rsi
+    - type: Clothing
+      sprite: White/Clothing/OuterClothing/robe.rsi
