--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1089,6 +1089,7 @@
       - CarpetBlack
       - CarpetPink
       - CarpetBlue
+      - CarpetSBlue
       - CarpetGreen
       - CarpetOrange
       - CarpetPurple
