--- a/Resources/Prototypes/Recipes/Lathes/clothing.yml
+++ b/Resources/Prototypes/Recipes/Lathes/clothing.yml
@@ -1249,6 +1249,13 @@
     Cloth: 100
 
 - type: latheRecipe
+  id: CarpetSBlue
+  result: FloorCarpetItemSkyBlue
+  completetime: 1
+  materials:
+    Cloth: 100
+
+- type: latheRecipe
   id: CarpetGreen
   result: FloorCarpetItemGreen
   completetime: 1
