--- a/Resources/Prototypes/Entities/Stations/base.yml
+++ b/Resources/Prototypes/Entities/Stations/base.yml
@@ -121,3 +121,9 @@
   abstract: true
   components:
     - type: StationEventEligible # For when someone makes this more granular in the future.
+
+- type: entity
+  id: BaseStationTeleportLocation
+  abstract: true
+  components:
+    - type: TeleportLocationTargetStation
