- add: Spell book.

--- a/Resources/Prototypes/_White/Wizard/wizard.yml
+++ b/Resources/Prototypes/_White/Wizard/wizard.yml
@@ -42,6 +42,7 @@
     head: ClothingHeadHatRealWizardFancy
     outerClothing: ClothingOuterRealWizardFancy
     shoes: ClothingShoesWizard
+    pocket1: SpellBook
   innerClothingSkirt: ClothingUniformJumpskirtColorDarkBlue
   satchel: ClothingBackpackSatchelFilled
   duffelbag: ClothingBackpackDuffelFilled
