--- a/Resources/Prototypes/Magic/knock_spell.yml
+++ b/Resources/Prototypes/Magic/knock_spell.yml
@@ -4,12 +4,11 @@
   description: This spell opens nearby doors.
   noSpawn: true
   components:
-  - type: Magic
-    requiresClothes: false
   - type: InstantAction
     useDelay: 8
     itemIconStyle: BigAction
     checkCanInteract: false
+    alwaysPlaySound: false
     icon:
       sprite: Objects/Magic/magicactions.rsi
       state: knock
