- add: Spellblade update.

--- a/Resources/Prototypes/Entities/Effects/lightning.yml
+++ b/Resources/Prototypes/Entities/Effects/lightning.yml
@@ -176,3 +176,16 @@
     - type: Lightning
       canArc: true
       lightningPrototype: WizardLightning
+
+- type: entity
+  name: wizard lightning
+  id: WeakWizardLightning
+  parent: BaseLightning
+  noSpawn: true
+  components:
+    - type: Electrified
+      requirePower: false
+      ignoreInsulation: true
+    - type: Lightning
+      canArc: true
+      lightningPrototype: WeakWizardLightning
