--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/magic.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/magic.yml
@@ -236,3 +236,44 @@
       stunAmount: 2
       knockdownAmount: 2
     - type: TeslaProjectile
+
+- type: entity
+  id: ProjectileMagicMissile
+  name: magic missile
+  description: asdf
+  parent: BaseBullet
+  noSpawn: true
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Projectiles/magic.rsi
+    layers:
+    - state: spell
+      color: pink
+  - type: Projectile
+    damage:
+      groups:
+        Burn: 0
+  - type: StaminaDamageOnCollide
+    damage: 60
+  - type: Ammo
+    muzzleFlash: null
+  - type: Trail
+    splineIteratorType: CatmullRom
+    splineRendererType: Continuous
+    creationMethod: OnMove
+    lengthStep: 0.1
+    scale: 0.05, 0.0
+    lifetime: 1
+    randomWalk: 0.1, 0.001
+    gravity: 0.0, 0.0
+    texturePath: /Textures/White/Effects/Trails/Continuous/trail.png
+    gradientIteratorType: Linear
+    gradient:
+      - 1, 0, 0, 1
+      - 1, 1, 0, 0.85
+      - 0, 1, 0, 0.7
+      - 0, 1, 1, 0.55
+      - 0, 0, 1, 0.4
+      - 1, 0, 1, 0.25
+      - 1, 0, 0, 0.1
+    optionsConcealable: true
