--- a/Resources/Prototypes/_White/Wizard/spellblade.yml
+++ b/Resources/Prototypes/_White/Wizard/spellblade.yml
@@ -10,7 +10,7 @@
 
 - type: entity
   name: Холод
-  description: Клинок заклинаний наделяется замораживать врагов. И тот, кто удерживает клинок в руках, становится неуязвимым к низкой температуре.
+  description: Клинок заклинаний наделяется способностью замораживать врагов. И тот, кто удерживает клинок в руках, становится неуязвимым к низкой температуре.
   id: AspectFrost
   noSpawn: true
   components:
