--- a/Resources/Prototypes/_White/Wizard/magic_items.yml
+++ b/Resources/Prototypes/_White/Wizard/magic_items.yml
@@ -36,6 +36,7 @@
       types:
         Slash: 30
   - type: Clothing
+    quickEquip: false
     sprite: White/Objects/Weapons/Chaplain/spellblade.rsi
     slots:
     - back
@@ -51,3 +52,55 @@
     inHandsOnly: true
     closeOnHandDeselect: true
   - type: SpellBlade
+
+- type: entity
+  name: мьёльнир
+  parent: BaseItem
+  id: Mjolnir
+  description: Могучий молот, заимствованный у Тора, бога грома. Он трещит от едва сдерживаемой силы.
+  components:
+  - type: Sprite
+    sprite: White/Objects/Weapons/mjolnir.rsi
+    state: icon
+  - type: MeleeWeapon
+    wideAnimationRotation: -135
+    attackRate: 0.75
+    damage:
+      types:
+        Blunt: 25
+        Structural: 20
+    soundHit:
+      path: /Audio/White/Magic/Mjolnir/hit.ogg
+    soundSwing:
+      path: /Audio/White/Magic/Mjolnir/swing.ogg
+  - type: Wieldable
+  - type: IncreaseDamageOnWield
+    damage:
+      types:
+        Blunt: 15
+        Structural: 60
+  - type: Item
+    size: Huge
+    sprite: White/Objects/Weapons/mjolnir.rsi
+  - type: Clothing
+    quickEquip: false
+    sprite: White/Objects/Weapons/mjolnir.rsi
+    slots:
+    - back
+    - suitStorage
+  - type: DisarmMalus
+  - type: MeleeThrowOnHit
+    lifetime: 0.05
+    minLifetime: 0.01
+    speed: 20
+    stunTime: 1.5
+    throwOnThrowHit: true
+  - type: DamageOtherOnHit
+    sound:
+      path: /Audio/White/Magic/Mjolnir/hit.ogg
+    damage:
+      types:
+        Blunt: 40
+        Structural: 80
+  - type: ChangeThrowForce
+    throwForce: 20
