- add: Add wizard to secret.

--- a/Resources/Prototypes/secret_weights.yml
+++ b/Resources/Prototypes/secret_weights.yml
@@ -1,10 +1,11 @@
 - type: weightedRandom
   id: Secret
   weights:
-    Traitor: 0.35
-    Changeling: 0.15
-    Nukeops: 0.15
+    Traitor: 0.3
+    Changeling: 0.14
+    Nukeops: 0.14
     Cult: 0.15
-    Revolutionary: 0.1
-    Zombie: 0.05
-    Survival: 0.05
+    Wizard: 0.15
+    Revolutionary: 0.04
+    Zombie: 0.04
+    Survival: 0.04
